--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -13,8 +13,9 @@
     </div>
   </div>
 </div>
-<div class="mobile-nav">
-  <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+<div class="mobile-nav" id="mobile-nav">
+  <a href="#" data-target="mobile-demo" class="sidenav-trigger">
+    <i class="material-icons medium">menu</i></a>
   <ul id="mobile-demo" class="sidenav">
         <li><a href="#">CONVOCATORIAS</a></li>
         <li><a href="#">TORNEOS</a></li>
