--- a/administrador/templates/lista_administrador.html
+++ b/administrador/templates/lista_administrador.html
@@ -13,13 +13,10 @@
                         <br>
                         <span class="title">{{administrador.email}}</span>
                     </div>
-                    <div class="col s2 m1 l1">
+                    <div class="secondary-content">
                         <br>
-                        <a href="{% url 'administrador:editar_administrador' administrador.id %}" class="secondary-content"><i class="small material-icons">mode_edit</i></a>
-                    </div>
-                    <div class="col s2 m1 l1">
-                        <br>
-                        <a class="modal-trigger secondary-content boton-eliminar" href="#delete-modal" data-id="{{administrador.id}}" data-nombre="{{administrador.first_name}}"><i class="small material-icons">delete</i></a>
+                        <a href="{% url 'administrador:editar_administrador' administrador.id %}" class="secondary-content"><i class="medium material-icons icon-blue">mode_edit</i></a>
+                        <a class="modal-trigger secondary-content boton-eliminar" href="#delete-modal" data-id="{{administrador.id}}" data-nombre="{{administrador.first_name}}"><i class="medium material-icons icon-red">delete</i></a>
                     </div>
                 </div>
             </li>
@@ -28,7 +25,7 @@
 </div>
 
 <div class="fixed-action-btn horizontal">
-    <a href="{% url 'administrador:agregar_administrador' %}" class="btn-floating btn-large blue">
+    <a href="{% url 'administrador:agregar_administrador' %}" class="btn-floating btn-large red-background">
         <i class="large material-icons">add</i>
     </a>
 </div>
@@ -54,8 +51,8 @@
         $(".boton-eliminar").click(function(){
             var id = $(this).attr("data-id") ;
             var nombre = $(this).attr("data-nombre") ;
-            $(".modal-content").html("<h6>¿Desea eliminar al administrador <strong>" + nombre + "</strong>?</h6>") ;
-            var botones = '<a href="/administrador/eliminar_administrador/' + id + '" class="modal-action modal-close waves-effect waves-green btn-flat confirmar-eliminar">Aceptar</a><a href="#cancelar" class="modal-action modal-close waves-effect waves-green btn-flat">Cancelar</a>' ;
+            $(".modal-content").html("<h4>¿Desea eliminar al administrador <strong>" + nombre + "</strong>?</h4>") ;
+            var botones = '<a href="#cancelar" class="modal-action modal-close cancel cancel-delete">Cancelar</a>  <a href="/administrador/eliminar_administrador/' + id + '" class="modal-action modal-close delete-color confirmar-eliminar">Aceptar</a>' ;
             $(".modal-footer").html(botones) ;
         }) ;
     </script>
