--- a/templates/nav.html
+++ b/templates/nav.html
@@ -20,11 +20,11 @@
   </nav>
 
   <ul class="sidenav" id="mobile-demo">
-    <li><div class="wellcome-pack"><h6 id="paketaxo">¡BIENVENIDO POLICARPIO!</h6></div></li>
+    <li><div class="wellcome-pack"><h6 id="paketaxo">¡BIENVENIDO {{ user.first_name | upper }}!</h6></div></li>
         <li><a href="{% url 'equipo:lista_equipos' %}">EQUIPO</a></li>
-        <li><a href="#">CONVOCATORIAS</a></li>
+        <li><a href="{% url 'jugadora:ver_jugadoras' %}">JUGADORAS</a></li>
+        <li><a href="{% url 'torneo:lista_torneos' %}">TORNEOS</a></li>
+        <li><a href="{% url 'administrador:lista_administrador' %}">ADMINISTRADORES</a></li>
         <li><a href="#">LIGAS</a></li>
-        <li><a href="#">GALERIA</a></li>
-        <li><a href="#">ORGANIZADORES</a></li>
         <li><a href="{% url 'logout' %}"><i class="material-icons">exit_to_app</i></a></li>
   </ul>
