--- a/torneo/templates/torneo/torneo_list.html
+++ b/torneo/templates/torneo/torneo_list.html
@@ -12,12 +12,17 @@
       <span class="title"><a href="{% url 'torneo:detalle_torneo' Torneo.id %}">{{ Torneo.nombre }}</a></span>
       <p>Fecha: {{ Torneo.fechaInicio }}</p>
       <div class="secondary-content">
+        {% if Torneo.activo %}
         <a href="#" data-target="delete" data-form="{% url 'torneo:eliminar_torneo' Torneo.id %}" class="delete-button">
           <i class="medium material-icons icon-red">delete</i>
         </a>
+        <a href="{% url 'torneo:cerrar_registro' Torneo.id %}">
+           <i class="medium material-icons icon-green">done_all</i>
+         </a>
         <a href="{% url 'torneo:editar_torneo' Torneo.id %}">
            <i class="medium material-icons icon-blue">mode_edit</i>
          </a>
+         {% endif %}
       </div>
     </li>
     {% empty %}
