--- a/landing/templates/landing/main.html
+++ b/landing/templates/landing/main.html
@@ -22,7 +22,7 @@
  <div class="container">
    <h2>Próximos juegos</h2>
    <div class="card-container">
-     <div class="card">
+     <div class="card match">
        <div class="card-image waves-effect waves-block waves-light">
          <div class="container">
            <img class="team" src="{% static 'static_media/USA.png' %}">
@@ -38,7 +38,7 @@
        </div>
      </div>
 
-     <div class="card">
+     <div class="card match">
        <div class="card-image waves-effect waves-block waves-light">
          <div class="container">
            <img class="team" src="{% static 'static_media/USA.png' %}">
@@ -54,7 +54,7 @@
        </div>
      </div>
 
-     <div class="card">
+     <div class="card match">
        <div class="card-image waves-effect waves-block waves-light">
          <div class="container">
            <img class="team" src="{% static 'static_media/USA.png' %}">
