--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -2,14 +2,14 @@
 <div class="navbar" id="navbar">
   <div class="container">
     <div class="column">
-      <img class="logo" src="{% static 'static_media/logo-white.svg' %}" alt="logo-plidi" />
+      <a href="/"><img class="logo" src="{% static 'static_media/logo-white.svg' %}" alt="logo-plidi" /></a>
     </div>
     <div class="column anchors">
       <div class="anchor">CONVOCATORIAS</div>
       <div class="anchor">TORNEOS</div>
       <div class="anchor">EQUIPOS</div>
       <div class="anchor">GALERIA</div>
-      <div class="anchor">ORGANIZADORES</div>
+      <div class="anchor"><a href="{% url 'landing:ver_organizadores' %}">ORGANIZADORES</a></div>
     </div>
   </div>
 </div>
