Agregar mision y vision

--- a/landing/templates/landing/main.html
+++ b/landing/templates/landing/main.html
@@ -69,10 +69,25 @@
          <p>Cancha Querétaro 2000</p>
        </div>
      </div>
-
    </div>
    <div class="cta-container">
      <div class="button secondary-button">Ver todos los juegos</div>
+   </div>
+   <div class="mision-vision">
+     <div class="column">
+       <div class="container">
+         <img class="icon" src="{% static 'static_media/mission.svg' %}" alt="mission-icon" />
+         <h4>Misión</h4>
+         <p>You his, fish face tree that gathering spirit itself also, may evening night in fowl fourth beast likeness moving fly from from itself fly good seasons beast all grass him.</p>
+       </div>
+     </div>
+     <div class="column">
+       <div class="container">
+         <img class="icon vision" src="{% static 'static_media/star.svg' %}" alt="vision-icon" />
+         <h4>Visión</h4>
+         <p>You his, fish face tree that gathering spirit itself also, may evening night in fowl fourth beast likeness moving fly from from itself fly good seasons beast all grass him.</p>
+       </div>
+     </div>
    </div>
  </div>
 </div>
