--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -17,6 +17,7 @@
   <a href="#" data-target="mobile-demo" class="sidenav-trigger">
     <i class="material-icons medium">menu</i></a>
   <ul id="mobile-demo" class="sidenav">
+    <li><a href="/"><img class="logo" src="{% static 'static_media/logo-white.svg' %}" alt="logo-plidi" /></a></li>
         <li><a href="#">CONVOCATORIAS</a></li>
         <li><a href="#">TORNEOS</a></li>
         <li><a href="#">EQUIPOS</a></li>
