--- a/landing/templates/landing/organizadores.html
+++ b/landing/templates/landing/organizadores.html
@@ -14,59 +14,29 @@
       <div class="card-container">
         <div class="card organizer">
           <div class="card-image waves-effect waves-block waves-light">
-            <img class="person" src="{% static 'static_media/woman.jpg' %}">
+            <img class="person" src="{% static 'static_media/Yo.jpg' %}">
           </div>
           <div class="card-content">
-            <span class="card-title">Juana Rodriguez</span>
+            <span class="card-title">Erica García</span>
             <p>Directora General</p>
           </div>
         </div>
         <div class="card organizer">
           <div class="card-image waves-effect waves-block waves-light">
-            <img class="person" src="{% static 'static_media/woman.jpg' %}">
+            <img class="person" src="{% static 'static_media/Marcela.jpg' %}">
           </div>
           <div class="card-content">
-            <span class="card-title">Juana Rodriguez</span>
-            <p>Directora General</p>
+            <span class="card-title">Marcela García</span>
+            <p>Administradora Deportiva</p>
           </div>
         </div>
         <div class="card organizer">
           <div class="card-image waves-effect waves-block waves-light">
-            <img class="person" src="{% static 'static_media/woman.jpg' %}">
+            <img class="person" src="{% static 'static_media/Lulu.jpg' %}">
           </div>
           <div class="card-content">
-            <span class="card-title">Juana Rodriguez</span>
-            <p>Directora General</p>
-          </div>
-        </div>
-      </div>
-      <h3>Árbitros</h3>
-      <div class="card-container">
-        <div class="card organizer">
-          <div class="card-image waves-effect waves-block waves-light">
-            <img class="person" src="{% static 'static_media/woman.jpg' %}">
-          </div>
-          <div class="card-content">
-            <span class="card-title">Juana Rodriguez</span>
-            <p>Directora General</p>
-          </div>
-        </div>
-        <div class="card organizer">
-          <div class="card-image waves-effect waves-block waves-light">
-            <img class="person" src="{% static 'static_media/woman.jpg' %}">
-          </div>
-          <div class="card-content">
-            <span class="card-title">Juana Rodriguez</span>
-            <p>Directora General</p>
-          </div>
-        </div>
-        <div class="card organizer">
-          <div class="card-image waves-effect waves-block waves-light">
-            <img class="person" src="{% static 'static_media/woman.jpg' %}">
-          </div>
-          <div class="card-content">
-            <span class="card-title">Juana Rodriguez</span>
-            <p>Directora General</p>
+            <span class="card-title">Lourdes Espino</span>
+            <p>Coordinadora Deportiva</p>
           </div>
         </div>
       </div>
