--- a/administrador/templates/editar_administrador.html
+++ b/administrador/templates/editar_administrador.html
@@ -13,7 +13,7 @@
                 </div>
                 <div class="input-field col s12 m6 l6">
                     <input type="text" name="Username" value="{{administrador.username}}" id="Username" class="validate" disabled>
-                    <label for="Username">Username</label>
+                    <label for="Username">Nombre de Usuario:</label>
                 </div>
                 <div class="input-field col s12 m12 l12">
                     <input type="email" name="{{form.email.html_name}}" value="{{form.email.value}}" id="{{form.email.id_for_label}}" class="validate">
