--- a/administrador/templates/confirmar_contrasena.html
+++ b/administrador/templates/confirmar_contrasena.html
@@ -9,12 +9,12 @@
             <div class="row">
                 <div class="input-field col s12 m6 l6">
                     <input type="password" name="{{form.password.html_name}}" id="{{form.password.id_for_label}}" class="validate" required>
-                    <label for="{{form.password.id_for_label}}">{{form.password.label_tag}}</label>
+                    <label for="{{form.password.id_for_label}}">Contraseña:</label>
                     {{form.password.errors}}
                 </div>
                 <div class="input-field col s12 m6 l6">
                     <input type="password" name="confirm_password" id="confirm_password" class="validate" required>
-                    <label for="confirm_password">Confirm Password</label>
+                    <label for="confirm_password">Confirmar Contraseña:</label>
                     {{form.confirm_password.errors}}
                 </div>
             </div>
