--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -7,7 +7,7 @@
     <div class="column anchors">
       <div class="anchor">CONVOCATORIAS</div>
       <div class="anchor">TORNEOS</div>
-      <div class="anchor">EQUIPOS</div>
+      <div class="anchor"><a href="{% url 'landing:ver_equipos' %}">EQUIPOS</a></div>
       <div class="anchor">GALERIA</div>
       <div class="anchor"><a href="{% url 'landing:ver_organizadores' %}">ORGANIZADORES</a></div>
     </div>
