--- a/landing/templates/landing/lista_equipos.html
+++ b/landing/templates/landing/lista_equipos.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% load static %}
 {% block main %}
-<div class="header">
+<div class="header small-header">
   <div class="image-header"></div>
   <div class="container">
     <h2>Equipos</h2>
@@ -12,8 +12,10 @@
     <ul class="collection">
       {% for equipo in equipos %}
       <a href="{% url 'landing:detalle_equipo' equipo.id %}">
-        <li class="collection-item avatar">{{equipo.nombre}}
+        <li class="collection-item avatar">
           <img src="{{ equipo.logo.url }}" class="circle"/>
+          <span class="title">{{equipo.nombre}}</span>
+          <p>{{ equipo.representante }}</p>
         </li>
       </a>
       {% endfor %}
