--- a/landing/templates/landing/organizadores.html
+++ b/landing/templates/landing/organizadores.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% load static %}
 {% block main %}
-  <div class="header">
+  <div class="header small-header">
     <div class="image-header"></div>
     <div class="container">
       <h2>Organizadores</h2>
