--- a/static/css/landing.css
+++ b/static/css/landing.css
@@ -253,7 +253,6 @@ a {
   width: 100%;
   border-radius: 5px !important;
   height: 100%;
-  /* border: 1px solid #e5e8ed */
 }
 
 .match .card-image {
@@ -285,7 +284,7 @@ a {
   font-size: 1.4em;
 }
 
-.team {
+.match .team {
   max-height: 5em;
   height: 100%;
   max-width: 5em;
@@ -354,16 +353,22 @@ a {
   display: flex;
   justify-content: center;
   align-items: center;
-  min-height: 30vh;
+  min-height: 60vh;
   height: 100%;
+}
+
+.small-header {
+  min-height: 40vh;
 }
 
 .header > .container {
   max-width: 1024px;
   width: 100%;
+  display: flex;
+  height:100%;
 }
 
-.header > .container > h2 {
+.header h2 {
   color: #fff;
 }
 
@@ -383,6 +388,19 @@ a {
   background-image: url("../static_media/soccer.jpg");
   z-index:-1;
   background-position: bottom;
+}
+
+.header > .container > .image-column {
+  flex-grow: 1;
+}
+
+.header > .container > .info-column {
+  flex-grow: 2;
+}
+
+.header > .container > .image-column > img {
+  width: 230px;
+  height: 230px;
 }
 
 /* Organizadores */
@@ -418,7 +436,7 @@ a {
 }
 
 /* mision and vision */
-.mision-vision {
+.mision-vision, .team-detail{
   display: flex;
   justify-content: space-between;
   padding: 4em 0 6em 0;
@@ -462,7 +480,7 @@ a {
   min-height: calc(80vh - 30vh);
 }
 
-.team-list > .container{
+.team-list > .container, .team-detail > .container{
   color: rgba(3,27,78,.7);
 }
 
@@ -479,6 +497,48 @@ a {
   justify-content: space-between;
   flex-wrap: wrap;
 }
+
+.campeonatos-ganados {
+  max-width: 100% !important;
+}
+
+.team-player {
+  max-width: 45% ;
+}
+
+.team-detail .team{
+  padding: 12px 24px 12px 24px;
+  height: 100%:
+}
+
+.campeonatos-ganados > .campeonato {
+  display: flex;
+  align-items: center;
+}
+
+.campeonatos-ganados .image-column {
+  margin-right: 24px;
+}
+
+.campeonatos-ganados .text-column > p {
+  margin: 0;
+}
+
+.team-detail .circle-icon {
+  width:50px;
+  height: 50px;
+  background-color: #F19800;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.team-detail .circle-icon > img {
+  max-height: 50%;
+}
+
+/* Partido */
+
 
 /* Mobile and tablet */
 @media (min-width: 360px) and (max-width: 767px) {
@@ -507,6 +567,10 @@ a {
 
   .organizer-content {
     padding-top: 2em !important;
+  }
+
+  .team-detail .team-player {
+    max-width: 100%;
   }
 }
 
