Agregar vista generica partido

--- a/landing/templates/landing/partido.html
+++ b/landing/templates/landing/partido.html
@@ -2,17 +2,72 @@
 {% load static %}
 {% block main %}
 <div class="header">
+  <div class="image-header"></div>
   <div class="container">
+    <div class="team">
+      <div class="logo">
+        <h2>0</h2>
+      </div>
+      <h6>Equipo 1</h6>
+    </div>
+    <div class="torneo">
+      <h6>Torneo Libelulas</h6>
+      <p>Jornada 12</p>
+      <p>Mar 16, 19:00 HRS</p>
+      <p>Final<p>
+    </div>
+    <div class="team">
+      <div class="logo">
+        <h2>1</h2>
+      </div>
+      <h6>Equipo 2</h6>
+    </div>
   </div>
 </div>
 <div class="match-content">
   <div class="container">
     <div class="team">
+      <div class="team-name">
+        <h6>Equipo 1</h6>
+      </div>
+      <ul class="collection">
+        <a href="#" class="collection-item">
+          <strong>23</strong>
+          <span>Carlos Roman</span>
+          <span>DEL</span>
+        </a>
+        <a href="#" class="collection-item">
+          <strong>23</strong>
+          <span>Carlos Roman</span>
+          <span>DEL</span>
+        </a>
+        <a href="#" class="collection-item">
+          <strong>23</strong>
+          <span>Carlos Roman</span>
+          <span>DEL</span>
+        </a>
+      </ul>
     </div>
     <div class="field">
-      <div class="image-field"></div>
     </div>
     <div class="team">
+      <ul class="collection">
+        <a href="#" class="collection-item">
+          <strong>23</strong>
+          <span>Carlos Roman</span>
+          <span>DEL</span>
+        </a>
+        <a href="#" class="collection-item">
+          <strong>23</strong>
+          <span>Carlos Roman</span>
+          <span>DEL</span>
+        </a>
+        <a href="#" class="collection-item">
+          <strong>23</strong>
+          <span>Carlos Roman</span>
+          <span>DEL</span>
+        </a>
+      </ul>
     </div>
   </div>
 </div>
