--- a/static/css/landing.css
+++ b/static/css/landing.css
@@ -368,6 +368,20 @@ a {
   height:100%;
 }
 
+.header .team, .header .torneo {
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.header .team > .logo {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+}
+
 .header h2 {
   color: #fff;
 }
@@ -539,6 +553,37 @@ a {
 
 /* Partido */
 
+.match-content {
+  background-color: #fff;
+  padding-top: 4em;
+  padding-bottom: 6em;
+}
+.match-content > .container {
+  display: flex;
+}
+
+.match-content .team {
+  flex-grow: 1;
+}
+
+/* borrar color despues */
+.match-content  .team-name {
+  background-color: #F19800;
+  padding: 5px 12px 12px 24px;
+}
+
+.match-content .collection {
+  margin-top: -7px;
+}
+
+.match-content .field {
+  flex-grow: 2;
+  background-image: url("../static_media/field.svg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 70vh;
+}
 
 /* Mobile and tablet */
 @media (min-width: 360px) and (max-width: 767px) {
