--- a/equipo/templates/equipo/equipo_detail.html
+++ b/equipo/templates/equipo/equipo_detail.html
@@ -64,13 +64,15 @@
       {% for jugadora in jugadoras_equipo %}
       <li class="collection-item avatar">
         {% if jugadora.Imagen %}
-        <img src="{{ jugadora.Imagen.url }}" alt="" class="circle" /> {% else %}
-        <img src="{% static 'static_media/default.jpg' %}" alt="" class="circle" /> {% endif %}
+          <img src="{{ jugadora.Imagen.url }}" alt="" class="circle" />
+        {% else %}
+          <img src="{% static 'static_media/default.jpg' %}" alt="" class="circle" />
+        {% endif %}
         <span class="title">{{ jugadora.Nombre}} {{ jugadora.Apellido }}</span>
         <p><strong>Fecha de nacimiento:</strong> {{ jugadora.Nacimiento }}</p>
         <div class="flex">
           <p><strong>Número:</strong> {{ jugadora.Numero }}</p>&nbsp;&nbsp;
-          <p><strong>Posición:</strong> {{ jugadora.Posicion }}</p>
+          <p><strong>Posición:</strong> {{ jugadora.get_Posicion_display }}</p>
         </div>
         <div class="secondary-content">
           <a class="modal-trigger delete-button" href="#borrarJugadorEquipoModal">
@@ -93,11 +95,11 @@
             <button class="submit" type="submit">Borrar</button>
         </form>
         </div>
+      </div>
         {% empty %}
         <li>No hay jugadoras registradas en este equipo aun.</li>
-        {% endfor %}
+      {% endfor %}
     </ul>
-    </div>
   </div>
 </div>
   <script>
