--- a/static/css/landing.css
+++ b/static/css/landing.css
@@ -558,6 +558,24 @@ a {
   padding-top: 4em;
   padding-bottom: 6em;
 }
+
+.header .logo > img {
+  height:200px;
+  width: 200px;
+
+}
+
+.header .row {
+  flex-direction: row;
+}
+
+
+.header .logo {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+
 .match-content > .container {
   display: flex;
 }
@@ -577,12 +595,12 @@ a {
 }
 
 .match-content .field {
-  flex-grow: 2;
+  flex-grow: 3;
   background-image: url("../static_media/field.svg");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  height: 70vh;
+  height: 75vh;
 }
 
 /* Mobile and tablet */
